# ruthenium

./: CMakeLists.txt  DOCUMENTATION.md  LICENSE  README.md
TESTING_GROUND/: CMakeLists.txt
TESTING_GROUND/include/allocators/: linear_allocator.h  pool_allocator.h
TESTING_GROUND/src/: main.cpp
TESTING_GROUND/src/allocators/: linear_allocator.cpp
include/: clock.h  core.h  format.h  logger.h  ruthenium.h  window.h
include/gl/: shader.h
include/memory/: stack_allocator.h
include/patterns/: patterns.h  singleton.h
include/subsys/: log_manager.h  memory_manager.h  subsystems.h  window_manager.h
src/: clock.cpp  core.cpp  logger.cpp  main.cpp  syslogs.txt  syslogs_details.txt  window.cpp
src/memory/: stack_allocator.cpp
src/subsys/: log_manager.cpp
